--- a/LINGI2365-Constraint_programming/Assignment4/report/document.tex
+++ b/LINGI2365-Constraint_programming/Assignment4/report/document.tex
@@ -174,6 +174,9 @@ We measured the performance of our different heuristics by looking at the time t
 The hierarchy is pretty clear, our first heuristic proves to be the most efficient, followed by the lexicographic and the labelFF. Then comes the second heuristic which is not efficient. \\ 
 And worst of all is the third heuristic, his disastrous results can be explained by the fact that in serie A the weights are the same value as the usefullness. In other words when we order by oUsefullness[o] it's as if we ordered by oWeight[o] which is the exact opposite of our best heuristic. 
 
+\subsubsection{Search strategy chosen}
+We chose to use our first heuristic as search strategy for the following questions since it performs a lot better than the others. 
+
 \subsection{Optimization over iterations} %5pt
 \subsubsection{Model}
 We represent the problem as a constraint satisfaction problem associated with an upper bound value. We add a totalUsefullness variable to the minimization problem variables. We also use a variable $ub$ which is initialized at the upper bound of the total usefullness of objects in the sack. In the "using" part of our program we force the total usefullness value to be equal to $ub$. Since we want to maximize the totalUSefullness we simply have do decrement the value of $ub$ until we reach a solution and this solution will maximize the total usefullness :  \\  
@@ -219,7 +222,11 @@ Because we want to maximize the totalUsefullness, starting with the upper bound 
 On the opposite, if we had wanted to minimize the objective we would have initialized it with the lower bound and then incremented it.
 
 \subsubsection{Experiments on knapsack-A and knapsack-B}
-%todo
+Here are the times taken compared to those of the previous question with our first heuristic for the serie A : 
+\begin{center}
+\includegraphics[width=\columnwidth]{q32timeA.png}%
+\end{center}
+And here are the times taken for the serie B : 
 
 
 \subsection{Optimization via divide and conquer} %4pt
