--- a/LINGI2365-Constraint_programming/Assignment4/report/document.tex
+++ b/LINGI2365-Constraint_programming/Assignment4/report/document.tex
@@ -227,7 +227,9 @@ Here are the times taken compared to those of the previous question with our fir
 \includegraphics[width=\columnwidth]{q32timeA.png}%
 \end{center}
 And here are the times taken for the serie B : 
-
+\begin{center}
+\includegraphics[width=\columnwidth]{q32timeB.png}%
+\end{center}
 
 \subsection{Optimization via divide and conquer} %4pt
 \subsubsection{Which of the four points must be executed on which events ?}
@@ -263,8 +265,17 @@ and
         } 
 }
 \end{lstlisting}
+
 \subsubsection{Experiments on knapsack-A, knapsack-B and knapsack-C}
+With this program the times taken for the instances of the serie A are too low to be of interest. 
+Here are the comparison graphs with the program from the previous question for the series B and C, the horizontal axis represents the file number and the vertical axis represents the time in milliseconds :  
+\begin{center}
+\includegraphics[width=\columnwidth]{q323timeB.png}%
+\end{center}
+\begin{center}
+\includegraphics[width=\columnwidth]{q323timeC.png}%
+\end{center}
 
-
+For the serie B this solution is clearly faster but for serie C the results are pretty much the sames. 
 
 \end{document}
